--- a/app/src/main/res/layout/fragment_questionnaire.xml
+++ b/app/src/main/res/layout/fragment_questionnaire.xml
@@ -28,6 +28,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="@dimen/default_spacing"
                 android:text="@{viewModel.question}"/>
 
             <ListView
@@ -40,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="@{() -> presenter.onNextClicked()}"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:text="@string/next" />
 
         </LinearLayout>
