--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,6 +16,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="navigateHome"
         app:srcCompat="@drawable/welcome_booster" />
 
 </LinearLayout>
